<resources>
    <string name="app_name">Prva pomoć</string>
    <string name="home_screen_start">Prva pomoć</string>
    <string name="home_screen_about">O aplikaciji</string>
    <string name="about_title">O aplikaciji</string>
    <string name="about_text1">Aplikacija Prva pomoć zamišljena je kao asistent pri pružanju prve pomoći u samom trenutku i na mjestu nesreće. Potičemo korisnika da u miru detaljno prouči aplikaciju, kako bi u stresnom trenutku nesreće što brže reagirao i lakše se snalazio u samoj aplikaciji.</string>
    <string name="about_text2">Aplikacija je izrađena uz potporu Hrvatskog Crvenog križa. Svi postupci su provjereni, na svim fotografijama postupke prve pomoći izvode stručne osobe.</string>
    <string name="about_text3">Aplikacija nije zamjena za stručnu medicinsku pomoć - namijenjena je korištenju samo do dolaska hitnih medicinskih službi. Aplikacija ne jamči uspjeh u spašavanju unesrećenih osoba te se autori odriču odgovornosti za ozlijede i druge negativne posljedice koje mogu nastati pri korištenju aplikacije. Aplikaciju koristite na vlastitu odgovornost.</string>
    <string name="about_text4">Aplikaciju je razvio tim \'import help\' u svrhu natjecanja App Start Contest 2017. Za sve komentare obratite nam se na mail tim.import.help@gmail.com.  Sve donacije iskoristit ćemo za nadogradnju i poboljšanje ove aplikacije.</string>
    <string name="safety_assessment_title">Provjera sigurnosti pristupa</string>
    <string name="safety_assessment_text">Važno je ne ugrožavati vlastitu sigurnost. Ako sumnjate na kakvu opasnost, nazovite hitne službe.</string>
    <string name="sa_green_button">Pristup je siguran</string>
    <string name="consciousness_title">Provjera stanja svijesti</string>
    <string name="consciousness_text">Nježno protresite ramena osobe i glasno joj se obratite\n(\'Čujete li me?\', \'Otvorite oči!\').</string>
    <string name="consciousness_text2">Ako osoba ne odgovara, nije pri svijesti.</string>
    <string name="consciousness_red_button">Nije pri svijesti</string>
    <string name="consciousness_green_button">Pri svijesti</string>
    <string name="consciousPerson_title">Pregled osobe pri svijesti</string>
    <string name="consciousPerson_text">Pregledajte osobu od glave do stopala i utvrdite ima li ozljeda.\n\nPostavite sljedeća pitanja:\n- Boluje li osoba od ičega?\n- Uzima li lijekove?\n- Ima li alergija?\n- Kad je zadnji put jela i pila?\n\nPozovite hitne službe!</string>
    <string name="callEmergency">Zovi 112</string>
    <string name="breathing_title">Provjera disanja</string>
    <string name="breathing_text">Jednu ruku postavite na čelo osobe, a dva prsta druge na vrh brade. Zabacite joj glavu unatrag. Primaknite joj se i 10 sekundi osluškujte njezino disanje.</string>
    <string name="breathing_red_button">Ne diše</string>
    <string name="breathing_green_button">Diše</string>
    <string name="breathingPerson_title">Postavljanje u bočni položaj</string>
    <string name="breathingPerson_text">Kleknite pored osobe i ispružite joj ruke i noge. Ruku koja je bliže vama, presavijte u laktu pod pravim kutem s dlanom okrenutim prema gore.</string>
    <string name="nonBreathingPerson_title">Reanimacija</string>
    <string name="nonBreathingPerson1_text">Kleknite pored osobe u ravnini prsnog koša. Isprepletite prste obje ruke i korijen dlana donje ruke postavite na sredinu prsne kosti.</string>
    <string name="nonBreathingPerson2_text">Izravnatim rukama postavljenima okomito na prsni koš osobe utiskujte prsnu kost 5-6 centimetara u dubinu. </string>
    <string name="nonBreathingPerson3_text">Nakon svakog pritiska pustite da se prsa potpuno izravnaju, ali ne odvajajte ruke od prsne kosti. Izvršite 30 takvih pritisaka.</string>
    <string name="nonBreathingPerson4_text">Postavite zaštitnu foliju na usta osobe, jednom rukom joj zatvorite nosnice, a dva prsta druge ruke postavite ispod vrha brade i nježno joj zabacite glavu.</string>
    <string name="nonBreathingPerson5_text">Svojim ustima u potpunosti obuhvatite usta osobe te upuhujte zrak jednu sekundu provjeravajući podiže li se prsni koš. Upuhnite tako dvaput.</string>
    <string name="nonBreathingPerson6_text">Nastavite naizmjenično pritiskati prsnu kost i upuhivati zrak u omjeru 30:2 do dolaska hitne pomoći.</string>
    <string name="breathingPerson1_text">Kleknite pored osobe i ispružite joj ruke i noge. Ruku koja je bliže vama, presavijte u laktu pod pravim kutom s dlanom okrenutim prema gore.</string>
    <string name="breathingPerson2_text">Drugu ruku osobe stavite preko njezinih prsa, gornji dio šake prislonite uz suprotan obraz i nastavite tako držati.</string>
    <string name="breathingPerson3_text">Vama udaljeniju nogu svojom slobodnom rukom presavijte u koljenu tako da stopalo osobe bude na tlu.</string>
    <string name="breathingPerson4_text">Pridržavajući dlan osobe uz lice, povlačite podignuto koljeno prema sebi dok ne dotakne tlo.</string>
    <string name="breathingPerson5_text">Glavu nježno zabacite unatrag kako bi dišni put ostao otvoren.</string>
    <string name="breathingPerson6_text">Nogu koju ste prebacili namjestite tako da natkoljenica i potkoljenica čine pravi kut.</string>
    <string name="breathingPerson7_text">Pozovite hitne službe, ostanite uz osobu i provjeravajte disanje.</string>
    <string name="donate">Doniraj!</string>
</resources>
