<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="importhelp.prvapomoc.About">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="340dp"
        android:layout_height="400dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/about_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_text1"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/about_text1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/about_text2"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="11dp"
                android:text="@string/about_text2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_text1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/about_text3"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/about_text3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_text2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/about_text4"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/about_text4"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_text3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/donate_button"
        android:onClick="donate"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:text="@string/donate"
        android:textColor="#828080"
        android:textSize="23sp"
        android:background="@drawable/round_button_green"
        android:layout_marginRight="92dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.904" />

</android.support.constraint.ConstraintLayout>
