<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="importhelp.prvapomoc.ConsciousPerson"
    android:background="#dbdbdb">

    <TextView
        android:id="@+id/consciousPerson_title"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:text="@string/consciousPerson_title"
        android:textSize="35sp"
        android:textColor="#000000"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.506" />

    <TextView
        android:id="@+id/consciousPerson_text"
        android:layout_width="315dp"
        android:layout_height="304dp"
        android:text="@string/consciousPerson_text"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/consciousPerson_title"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/consciousPerson_text">

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/sound15" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/button_pause"
            android:onClick="pausePlaySound" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_repeat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/button_repeat"
            android:onClick="restartSound" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="185dp"
            tools:layout_editor_absoluteY="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/consciousPerson_red_button"
        android:onClick="callEmergency"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:text="@string/callEmergency"
        android:textSize="23sp"
        android:textColor="#dbdbdb"
        android:background="@drawable/round_button_red"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
